syntax = "proto3";

package org.brewchain.account.gens;

enum PACTModule {
	ACT = 0; // 账户，合约，合约代码
};
enum PACTCommand {
    GAC = 0; // 获取单个账户
    GAS = 1; // 批量获取账户

    QIC = 2; // 查询已创建的token
}

message ReqQueryIC {
    string token = 1;
    string address = 2;
}

message RespQueryIC {
    int32 retCode = 1;
    string retMsg = 2;
    repeated MsgToken tokens = 3;
}

message MsgToken {
    string token = 1;
    string timestamp = 2;
    string amount = 3;
    string creator = 4;
}

message ReqCreateAccount {
    string address = 1;
    string pubKey = 2;
}

message RespCreateAccount {
    int32 retCode = 1;
}

message ReqCreateUnionAccount {
    string address = 1;
    string max = 2;
    string acceptMax = 3;
    int32 acceptLimit = 4;
    repeated string relAddress = 5;
    repeated string signature = 6;
    repeated string pubKey = 7;
}

message RespCreateUnionAccount {
    int32 retCode = 1;
}

message ReqGetAccount {
    string address = 1;
}

message RespGetAccount {
    int32 retCode = 1;
    string address = 2;
    AccountValueImpl account = 3;
}

message ReqGetAccounts {
    repeated string address = 1;
}

message RespGetAccounts {
    int32 retCode = 1;
    repeated string address = 2;
    repeated AccountValueImpl account = 3;
}


message AccountValueImpl {
    int32 nonce = 1;
    string balance = 2;
    string pubKey = 3;
    string max = 4;
    string acceptMax = 5;
    int32 acceptLimit = 6;
    repeated string address = 7;
    repeated AccountTokenValueImpl tokens = 8;
    repeated AccountCryptoValueImpl cryptos = 9;
    string code = 10;
    string storage = 11;
    string codeHash = 12;
    string accountAddress = 13;
    string data = 14;
}

message AccountTokenValueImpl {
    string token = 1;
    string balance = 2;
    string locked = 3;
}

message AccountCryptoValueImpl {
    string symbol = 1; // 用于分类ERC721 Token的标记
    repeated AccountCryptoTokenImpl tokens = 2;
}

message AccountCryptoTokenImpl {
    string hash = 1; // Token的hash，hash(index,total,code,name,timestamp)
    int64 timestamp = 2; // Token创建时间
    int32 index = 3; // 该Token发行时的索引
    int32 total = 4; // 该Token的发行总数量
    string code = 5; // Token的编号
    string name = 6; // Token的名称
    string owner = 7; // 所有人的账户地址
    int32 nonce = 8; // 交易次数
    int64 ownertime = 9; // 所有人获取时间
}